# CTIT

./: .gitignore  .ls-lint.yml  .zizmor.yml  Makefile  README.md  apply_patch.sh  build.sh  ctit.py  parse_issue.py  projects.json  pyproject.toml  run_tester.py
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: actions-lint.yaml  build-ctit-container.yaml  check-tester.yaml  code-format.yaml  code-lint.yaml  eof-newline.yaml  ls-lint.yaml  shellcheck.yaml  tests.yaml  update-llvm.yaml  validate-pyproject.yaml  yaml.yaml
.github/workflows/containers/ctit-runner/: Dockerfile
testers/: base.py  clone_projects.py  config.py  cppcheck.sh  generate_report.py  llvm.sh
testers/projects/: cppcheck.py  llvm.py
tests/: test_clone_projects.py  test_config.py  test_ctit.py  test_generate_report.py  test_parse_issue.py
